--- a/05/font.css
+++ b/05/font.css
@@ -9,42 +9,127 @@ body{
 }
 .header-container{
     display: flex;
-    max-width: 800px;
+    width: 940px;
     margin: 0 auto;
     padding-top: 65px;
     padding-bottom: 59px;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: space-between;  
+}
+.logo-block, .social-block{
+    width: 470px;
+    display: inline-block;
+}
+.social-block{
+    text-align: right;
+    
+}
+.social-block a{
+    display: inline-block;
+    text-decoration: none;
+    margin-left: 21px;
+}
+.text-container h2{
+    font-size: 44px;
+    font-weight: 400px;
+    line-height: 54px;
+    margin-bottom: 40px;
+    margin-top: 0;
+    
+}
+.text-content{
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 0;
+    margin-bottom: 32px;
 }
 .text-container{
-    max-width: 400px;
+    max-width: 810px;
     margin: 0 auto;
     text-align: center;
     
 }
 .form{ 
-    background: rgb(250, 201, 96);
-    text-align: center;
-    margin: 0 auto;
-    padding-top: 92px;
-    padding-bottom: 92px;
-    color: rgb(138, 109, 47);
+    padding-top: 102px;
+    padding-bottom: 117px;
+    background: rgb(250, 201, 96);  
+    color: rgb(138, 109, 47)
+}
+.mail-form input{
+    border: none;
+    padding: 0 36px;
+    font-size: 30px;
+    width: 560px;
+    height: 54px;
+    border-radius: 2px 0px 0px 2px;
+
+
 }
 .button-form{
     background: rgb(168, 134, 61);
     color: rgb(255, 255, 255);
     border: none;
-    padding-left: 40px;
-    padding-right: 34px;
-    
+    font-size: 30px;
+    width: 240px;
+    height: 54px;
+    text-align: center; 
 }
 .space{
+    padding-top: 71px;
+    padding-bottom: 81px;
     background: rgb(242, 242, 242);
+
+}
+/* Unlimited image space */
+.unlimited-image-space{
+    padding-top: 26px;
+}
+.title-element{
+    color: rgba(0, 0, 0, 0.56);
+    font-size: 37px;
+    font-weight: 400;
+    line-height: 36px;
+    text-align: center;
+    margin-bottom: 32px;
+    margin-top: 0;
+}
+.mobile{
+    padding-top: 88px;
+    padding-bottom: 21px;
 }
 .share{
     text-align: center;
     background: rgb(250, 201, 96);
+    padding-top: 54px;
+    padding-bottom: 107px;
+    border-bottom: 3px solid rgb(255, 255, 255);
+}
+.tell-your-friends-button{
+    color: rgb(153, 153, 153);
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: center;
+    box-sizing: border-box;
+    border: 1px solid rgb(117, 134, 150);
+    border-radius: 3px;
+    background: rgb(255, 255, 255);
+    padding: 0 23px;
 }
 .end{
     background: rgb(242, 242, 242);
+    padding: 81px 0;
+}
+.link-block{
+    padding-top: 24px;
+    text-align: center;
+}
+.link-block a{
+    display: inline-block;
+    text-decoration: none;
+    margin-right: 22px;
+}
+.link-block a:last-child{
+    margin: 0;
 }
